Fix mobile theme toggle button stretching

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -161,7 +161,7 @@
     border-top: 1px solid var(--border-color);
   }
 
-  .mobileActions button {
+  .mobileActions > button {
     width: 100%;
   }
 
